# robowoofy-ng

./: .env.example  Dockerfile  README.md  network-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: run-woofy.yml  scheduled-woofy.yml
src/: config.py  helpers.py  sign.py  tg.py  utils.py  woof.py
